--- a/README
+++ b/README
@@ -1,20 +1,20 @@
 
 rosprolog is a wrapper around swi-prolog that uses an additional user-init file.
 Some new predicates are added in this file:
- * register_ros_package( <ros-package-name> )
-   Loads the initialization file from $(rospack find <ros-package-name>)/prolog/<prolog-file-path>.
- * use_ros_module( <ros-package-name>, '<prolog-file-path>' )
-   Load a prolog module from $(rospack find <ros-package-name>)/prolog/<prolog-file-path>.
- * ros_package_path( Package, Path )
-   Get the absolute path of a package.
- * ros_info( Msg ), ros_warning( Msg ), ros_error( Msg )
+ * register_ros_package/1 Loads the initialization file of a KnowRob ROS package.
+ * use_ros_module/2 Load a prolog module from a KnowRob ROS package.
+ * ros_package_path/2 Get the absolute path of a package.
+ * ros_info/1, ros_warning/1, ros_error/1
    Send logging messages to ROS master.
- * tf_lookup_transform( Target, Source, Transform ), ...
-   TFTransformListener interface.
+ * tf_lookup_transform/3 TFTransformListener interface.
 
 To run rosprolog, use:
+==
 rosrun rosprolog rosprolog
-
+==
+ 
 To start a prolog package within rosprolog (incl. calling its init.pl file and all init.pl of referenced packages), use:
+==
 rosrun rosprolog rosprolog <pkgname>
+==
 
